--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin-bottom:10% ;
 }
 .flex{
   display: flex;
@@ -76,6 +77,7 @@ cursor: pointer;
   .check-box{
  align-items: center;
  margin-left:20%;
+ cursor: pointer;
   }
 
   .round-btn{
@@ -109,3 +111,6 @@ cursor: pointer;
   width: 100%;
  }
 
+.active{
+  background-color: aqua;
+}
